# BBB

./: .gitignore
app/: createApp.sh
app/hello_world/: CMakeLists.txt
app/hello_world/src/: hello.c
app/ipcMsg/: CMakeLists.txt
app/ipcMsg/include/: msgData.h
app/ipcMsg/src/: client.c  server.c
app/ipcSemaphore/: CMakeLists.txt
app/ipcSemaphore/include/: semaWrapper.h
app/ipcSemaphore/src/: main.c  semaWrapper.c
app/ipcSocket/: CMakeLists.txt  masterbuild.sh
app/ipcSocket/Toolchain/: beaglebone_black.toolchain.cmake
app/ipcSocket/client/: CMakeLists.txt
app/ipcSocket/client/src/: client.c  client.cpp
app/ipcSocket/lib/: CMakeLists.txt
app/ipcSocket/lib/csvHandler/include/: csvHandler.h
app/ipcSocket/lib/csvHandler/src/: csvHandler.c
app/ipcSocket/lib/encodeHandler/include/: encodeHandler.h
app/ipcSocket/lib/encodeHandler/src/: encodeHandler.c
app/ipcSocket/lib/fileHandler/include/: fileHandler.h
app/ipcSocket/lib/fileHandler/src/: fileHandler.c
app/ipcSocket/lib/include/: csvHandler.h  encodeHandler.h  fileHandler.h  remoteHaShaHandler.h
app/ipcSocket/lib/src/: encodeHandler.c  encodeHandler.cpp  fileHandler.c  fileHandler.cpp  remoteHaShaHandler.c
app/ipcSocket/server/: CMakeLists.txt
app/ipcSocket/server/include/: verifyLoginHandler.h
app/ipcSocket/server/src/: server.c  server.cpp  verifyLoginHandler.c  verifyLoginHandler.cpp
app/ipcSocket/src/: client.c  server.c
app/ipcSocket/tool/: CMakeLists.txt
app/ipcSocket/tool/include/: userDBHandler.h
app/ipcSocket/tool/src/: main.c  userDBHandler.c  userDBHandler.cpp
app/ptrace/: CMakeLists.txt
app/ptrace/src/: debug.c  trace.c
kmod/hello_world/: Makefile  hello.c
kmod/scull/: Makefile
kmod/scull/inc/: scull.h  ulog.h
kmod/scull/script/: scull_load.sh  test.sh
kmod/scull/src/: main.c
